--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -305,14 +305,14 @@
 
 .markdown-body ol ol,
 .markdown-body ul ol {
-  list-style-type: lower-roman;
+  list-style-type: lower-roman !important;
 }
 
 .markdown-body ul ul ol,
 .markdown-body ul ol ol,
 .markdown-body ol ul ol,
 .markdown-body ol ol ol {
-  list-style-type: lower-alpha;
+  list-style-type: lower-alpha !important;
 }
 
 .markdown-body dd {
@@ -884,6 +884,13 @@
 
 .markdown-body .footnotes li {
   position: relative;
+}
+
+.markdown-body ol li {
+  list-style-type:decimal !important;
+}
+.markdown-body ul li {
+  list-style-type: disc !important;
 }
 
 .markdown-body .footnotes li:target::before {
