--- a/src/nui/forms.css
+++ b/src/nui/forms.css
@@ -42,6 +42,7 @@
 }
 
 .nui-input {
+  @apply appearance-none;
   @apply nui-bg-solid;
   @apply border border-gray-500 border-opacity-20 dark:border-gray-400 dark:border-opacity-40;
   @apply py-2 px-3;
@@ -50,10 +51,11 @@
   @apply dark:text-white;
   @apply shadow-sm;
   @apply transform-gpu transform transition-all duration-100;
+  min-height: 36px;
 }
 .nui-input:active,
 .nui-input:focus {
-  outline: none;
+  @apply outline-none;
   @apply ring ring-primary-500;
   @apply shadow-lg;
 }
