--- a/src/nui/modal.css
+++ b/src/nui/modal.css
@@ -13,4 +13,12 @@
   min-height: calc(50vh);
   width: calc(100vw - 10%);
   max-width: 500px;
+
+  &.fullscreen {
+    max-width: 100vw;
+    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
+    @apply rounded-none;
+  }
 }
