--- a/src/nui/modal.css
+++ b/src/nui/modal.css
@@ -9,16 +9,16 @@
 .nui-modal {
   @apply rounded-2xl;
   @apply bg-gray-100 dark:bg-gray-900;
+  @apply shadow-2xl;
   max-height: calc(100vh - 20%);
   min-height: calc(50vh);
   width: calc(100vw - 10%);
   max-width: 500px;
 
   &.fullscreen {
-    max-width: 100vw;
-    max-height: 100vh;
-    width: 100vw;
-    height: 100vh;
-    @apply rounded-none;
+    max-width: calc(100vw - 20px);
+    max-height: calc(100vh - 20px);
+    width: calc(100vw - 20px);
+    height: calc(100vh - 20px);
   }
 }
