--- a/src/styles/nui@v1.css
+++ b/src/styles/nui@v1.css
@@ -303,6 +303,9 @@
   text-transform: uppercase;
   font-weight: 600;
 }
+.nui-button:disabled {
+  opacity: 0.5;
+}
 .nui-button.sm {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -318,12 +321,12 @@
 }
 .nui-button.primary {
   --tw-text-opacity: 1;
-  color: rgb(0 170 255 / var(--tw-text-opacity));
+  color: rgb(0 131 212 / var(--tw-text-opacity));
 }
 @media (prefers-color-scheme: dark) {
   .nui-button.primary {
     --tw-text-opacity: 1;
-    color: rgb(44 189 255 / var(--tw-text-opacity));
+    color: rgb(0 170 255 / var(--tw-text-opacity));
   }
 }
 .nui-button.solid {
@@ -600,6 +603,7 @@
 }
 .nui-button-group > button {
   width: 100%;
+  font-weight: 600;
 }
 .nui-button-group .active {
   --tw-bg-opacity: 1;
@@ -682,17 +686,19 @@
   }
 }
 .nui-modal {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   max-height: calc(100vh - 20%);
   min-height: calc(50vh);
   width: calc(100vw - 10%);
   max-width: 500px;
 }
 .nui-modal.fullscreen {
-    max-width: 100vw;
-    max-height: 100vh;
-    width: 100vw;
-    height: 100vh;
-    border-radius: 0px;
+    max-width: calc(100vw - 20px);
+    max-height: calc(100vh - 20px);
+    width: calc(100vw - 20px);
+    height: calc(100vh - 20px);
   }
 /* Text Styles  */
 .nui-hbar {
@@ -802,3 +808,14 @@
   }
 }
 /* Switch */
+.slide-enter-active, .slide-leave-active {
+  transition-property: all;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.slide-enter, .slide-leave-to {
+  --tw-translate-y: 2.5rem;
+  transform: var(--tw-transform);
+  --tw-transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0;
+}
