--- a/src/styles/nui@v1.css
+++ b/src/styles/nui@v1.css
@@ -272,7 +272,7 @@
   }
 }
 .nui-button {
-  border-radius: 0.375rem;
+  border-radius: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.5rem;
@@ -334,15 +334,9 @@
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-@media (prefers-color-scheme: dark) {
-  .nui-button.primary.solid {
-    --tw-bg-opacity: 1;
-    background-color: rgb(44 189 255 / var(--tw-bg-opacity));
-  }
-}
 .nui-button.primary.solid {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 170 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 131 212 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -388,6 +382,14 @@
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+.nui-fieldset.inline {
+  align-items: center;
+}
+.nui-fieldset.inline > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
 .nui-fieldset.inline label {
   width: 5rem;
   line-height: 1.25;
@@ -397,6 +399,7 @@
 .nui-fieldset.inline input, .nui-fieldset.inline select {
   flex-shrink: 1;
   flex-grow: 1;
+  margin-top: 0px;
 }
 .nui-fieldset.inline {
   display: flex;
@@ -481,6 +484,9 @@
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.nui-input.transparent {
+  border-color: transparent;
 }
 .nui-input:not(:placeholder-shown):invalid {
   --tw-text-opacity: 1;
@@ -573,8 +579,6 @@
   --tw-divide-opacity: 0.3;
 }
 .nui-button-group {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
   overflow: hidden;
   border-radius: 0.5rem;
   padding: 0.25rem;
@@ -607,7 +611,7 @@
 }
 .nui-button-group .active {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 170 255 / var(--tw-bg-opacity));
+  background-color: rgb(0 131 212 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -795,7 +799,7 @@
 .nui-item .clickable {
   cursor: pointer;
 }
-.nui-divider {
+.nui-divider, hr[nui] {
   width: 100%;
   position: relative;
   border-top-width: 1px;
@@ -803,7 +807,7 @@
   --tw-border-opacity: 0.3;
 }
 @media (prefers-color-scheme: dark) {
-  .nui-divider {
+  .nui-divider, hr[nui] {
     --tw-border-opacity: 0.4;
   }
 }
