--- a/src/styles/nui@v1.css
+++ b/src/styles/nui@v1.css
@@ -177,6 +177,16 @@
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
+.nui-text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(0 170 255 / var(--tw-text-opacity));
+}
+@media (prefers-color-scheme: dark) {
+  .nui-text-primary {
+    --tw-text-opacity: 1;
+    color: rgb(44 189 255 / var(--tw-text-opacity));
+  }
+}
 .nui-text-50 {
   --tw-text-opacity: 1;
   color: rgb(249 250 251 / var(--tw-text-opacity));
