chore: my people work

--- a/src/nui/forms.css
+++ b/src/nui/forms.css
@@ -67,6 +67,11 @@
   @apply border-transparent;
 }
 
+.nui-input.compact {
+  @apply py-px px-2;
+  min-height: 28px;
+}
+
 .nui-input:not(:placeholder-shown):invalid {
   @apply text-red-500;
   @apply ring ring-red-500;
